# gsv8lib

./: LICENSE  README.md  pyproject.toml
examples/: benchmark.py  benchmarkdll.py
src/gsv86lib/: GSV6_BasicFrameType.py  GSV6_FrameRouter.py  GSV6_MessFrameHandler.py  GSV6_Protocol.py  GSV6_SeriallLib.py  __init__.py  gsv86.py
src/gsv8lib/: GSV6_BasicFrameType.py  GSV6_FrameRouter.py  GSV6_MessFrameHandler.py  GSV6_Protocol.py  GSV6_SeriallLib.py  gsv8.py
