[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gsv86lib"
version = "0.1.0"
description = "Python library for ME-Systeme GSV-8 and GSV-6 (wrapped from gsv8pypi_python3)"
authors = [{ name = "ME-Systeme GmbH" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["pyserial"]

[project.urls]
Homepage = "https://github.com/me-systeme/gsv86lib"
